src/main/java/com/example/updatemebook/errors/UserNotFoundException.java
package com.example.updatemebook.errors;

public class UserNotFoundException extends RuntimeException{
    public UserNotFoundException(String message){
        super(message);
    }
}
